# docker-MQ

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test.py
alembic/: env.py
alembic/versions/: 28445bc88559_update_models.py  3911ea6076a4_create_models.py  618ffbe72223_create_models.py  aaef1b70bdfc_create_models.py
app/: context_managers.py  database.py  dependencies.py  main.py  models.py  utils.py
app/api/: user_routes.py
app/repositories/: interfaces.py  repositories.py
app/schemas/: user_schemas.py
app/services/: interfaces.py  services.py
app/worker/: beat_schedule.py  celery_app.py
app/worker/tasks/: arithmetic.py
websocket/: broker.py  manager.py  router.py  routers.py
websocket/servic_socket/: interfaces.py  service.py
websocket/service_socket/: interfaces.py  service.py
